# Tachikoma

./: .commitlintrc.json  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  EDIT_FILE_UNIQUENESS_DEMO.md  LICENSE  Makefile  PHASE2_POLISH_PLAN.md  README.md  build.config.ts  clippy.toml  code_base_reference_map_evolving.md  coverage.config.json  package-lock.json  package.json  prompt.md  ralph-loop-agentic-platform-spec.md  release-config.example.json  rustfmt.toml  test_roles.rs  version.json
crates/tachikoma-audit-alerting/: Cargo.toml
crates/tachikoma-audit-alerting/src/: lib.rs
crates/tachikoma-audit-archival/: Cargo.toml
crates/tachikoma-audit-archival/src/: archive.rs  archive_creator.rs  archive_retriever.rs  cloud_storage.rs  lib.rs
crates/tachikoma-audit-capture/: Cargo.toml
crates/tachikoma-audit-capture/src/: batch.rs  capture.rs  lib.rs  security_events.rs
crates/tachikoma-audit-compliance/: Cargo.toml
crates/tachikoma-audit-compliance/src/: compliance.rs  control_library.rs  dsar_handler.rs  gdpr.rs  lib.rs  report_generator.rs
crates/tachikoma-audit-export/: Cargo.toml
crates/tachikoma-audit-export/src/: export.rs  lib.rs
crates/tachikoma-audit-immutability/: Cargo.toml
crates/tachikoma-audit-immutability/src/: hash_chain.rs  lib.rs  merkle.rs
crates/tachikoma-audit-search/: Cargo.toml
crates/tachikoma-audit-search/src/: lib.rs
crates/tachikoma-audit-system-events/: Cargo.toml
crates/tachikoma-audit-system-events/src/: lib.rs  recorder.rs
crates/tachikoma-audit-timeline/: Cargo.toml
crates/tachikoma-audit-timeline/src/: lib.rs
crates/tachikoma-audit-types/: Cargo.toml
crates/tachikoma-audit-types/src/: action.rs  actor.rs  category.rs  event.rs  id.rs  lib.rs  severity.rs
crates/tachikoma-audit-user-activity/: Cargo.toml
crates/tachikoma-audit-user-activity/src/: lib.rs
crates/tachikoma-backends-core/: Cargo.toml
crates/tachikoma-backends-core/src/: lib.rs
crates/tachikoma-cli/: Cargo.toml
crates/tachikoma-cli/src/: cli.rs  error.rs  lib.rs  main.rs  output.rs
crates/tachikoma-cli/src/args/: mod.rs  parsers.rs  validators.rs
crates/tachikoma-cli/src/commands/: backends.rs  build.rs  chat.rs  completions.rs  config.rs  doctor.rs  init.rs  manpages.rs  migrate.rs  mod.rs  tools.rs
crates/tachikoma-cli/src/error/: formatter.rs  handler.rs
crates/tachikoma-cli/src/help/: examples.rs  formatter.rs  mod.rs  suggestions.rs
crates/tachikoma-cli/src/output/: color.rs  format.rs  icons.rs  json.rs  printer.rs  progress.rs  table.rs  text.rs
crates/tachikoma-cli/src/prompts/: mod.rs
crates/tachikoma-cli/src/templates/: builtin.rs  getting_started_spec.md  loader.rs  manifest.rs  mod.rs  renderer.rs  specs_readme.md
crates/tachikoma-cli/tests/common/: mod.rs
crates/tachikoma-common-async/: Cargo.toml  README.md
crates/tachikoma-common-async/src/: lib.rs
crates/tachikoma-common-config/: Cargo.toml
crates/tachikoma-common-config/src/: detection.rs  env.rs  integration_test.rs  lib.rs  loader.rs  simple.rs  types.rs
crates/tachikoma-common-core/: Cargo.toml  build.rs
crates/tachikoma-common-core/src/: error.rs  id.rs  lib.rs  result.rs  status.rs  timestamp.rs  types.rs
crates/tachikoma-common-core/tests/: snapshot_tests.rs
crates/tachikoma-common-http/: Cargo.toml  README.md
crates/tachikoma-common-http/src/: client.rs  lib.rs  request.rs  response.rs  retry.rs
crates/tachikoma-common-http/tests/: integration.rs
crates/tachikoma-common-log/: Cargo.toml
crates/tachikoma-common-log/examples/: logging_demo.rs  tracing_demo.rs
crates/tachikoma-common-log/src/: lib.rs  spans.rs
crates/tachikoma-common-secret/: Cargo.toml
crates/tachikoma-common-secret/src/: lib.rs
crates/tachikoma-common-tool/: Cargo.toml
crates/tachikoma-common-tool/src/: accumulator.rs  call.rs  context.rs  lib.rs
crates/tachikoma-database/: Cargo.toml
crates/tachikoma-database/src/database/: compile_config.rs  manager.rs  mod.rs  pool.rs  sqlite_config.rs
crates/tachikoma-forge/: Cargo.toml
crates/tachikoma-forge/src/: error.rs  lib.rs  orchestrator.rs  participant.rs  prompts.rs  quality.rs  round.rs  session.rs
crates/tachikoma-forge/src/deliberation/: convergence.rs  mod.rs  rounds.rs
crates/tachikoma-forge/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  (+1 more)
crates/tachikoma-git/: Cargo.toml
crates/tachikoma-git/src/: blame.rs  branch.rs  commit.rs  conflict.rs  credentials.rs  detached.rs  detect.rs  diff.rs  diff_impl.rs  error.rs  history.rs  hooks.rs  keychain.rs  lfs.rs  lib.rs  merge.rs  oid.rs  push.rs  reference.rs  remote.rs  repository.rs  ssh.rs  staging.rs  status.rs  status_impl.rs  worktree.rs
crates/tachikoma-git/tests/: hooks_test.rs  remote_test.rs
crates/tachikoma-napi/: Cargo.toml  index.d.ts  package-lock.json  package.json
crates/tachikoma-napi/src/: forge.rs  lib.rs
crates/tachikoma-plugin/: Cargo.toml
crates/tachikoma-plugin/src/: agent.rs  lib.rs  loader.rs  manifest.rs  template.rs  tracker.rs
crates/tachikoma-plugin/templates/: system-prompt.hbs.default  task-prompt.hbs.default
crates/tachikoma-primitives/: Cargo.toml
crates/tachikoma-primitives/src/: context.rs  error.rs  lib.rs  result.rs  traits.rs
crates/tachikoma-server/: Cargo.toml
crates/tachikoma-server/benches/: api_benchmarks.rs
crates/tachikoma-server/src/: lib.rs
crates/tachikoma-spec/: Cargo.toml
crates/tachikoma-spec/src/: checkbox.rs  citation.rs  directory.rs  impl_plan.rs  lib.rs  linting.rs  metadata.rs  parsing.rs  pattern_link.rs  progress.rs  readme.rs  rendering.rs  search_api.rs  search_index.rs  templates.rs  validation.rs  versioning.rs  watcher.rs
crates/tachikoma-test-harness/: Cargo.toml
crates/tachikoma-test-harness/benches/: criterion_benchmarks.rs  criterion_config.rs
crates/tachikoma-test-harness/src/: assertions.rs  context.rs  fixtures.rs  flaky.rs  generators.rs  isolation.rs  lib.rs  macros.rs  proptest_config.rs  reporters.rs  setup.rs  snapshot.rs  strategies.rs
crates/tachikoma-test-harness/tests/: network_mock_tests.rs
(+1428 files in other folders)
