[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "tools/ralph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Tachikoma Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tachikoma-project/tachikoma"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rustdoc]
missing_docs = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
futures-util = "0.3"

# Bytes handling
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
test-case = "3.3"
mockall = "0.12"
tokio-test = "0.4"

# NAPI for Electron binding
napi = "2.14"
napi-derive = "2.14"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false