[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "tools/ralph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Tachikoma Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tachikoma-project/tachikoma"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rustdoc]
missing_docs = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
futures-util = "0.3"

# Bytes handling
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
url = "2.5"
semver = "1.0"
glob = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
test-case = "3.3"
mockall = "0.12"
tokio-test = "0.4"

# External dependencies
notify = "6.1"
tempfile = "3.8"

# NAPI for Electron binding
napi = "2.14"
napi-derive = "2.14"

# Primitives crate
tachikoma-primitives = { path = "crates/tachikoma-primitives" }

# Common crates
tachikoma-common-core = { path = "crates/tachikoma-common-core" }
tachikoma-common-config = { path = "crates/tachikoma-common-config" }
tachikoma-test-utils = { path = "crates/tachikoma-test-utils" }
tachikoma-test-harness = { path = "crates/tachikoma-test-harness" }

# Audit crates
tachikoma-audit-types = { path = "crates/tachikoma-audit-types" }
tachikoma-audit-capture = { path = "crates/tachikoma-audit-capture" }
tachikoma-audit-system-events = { path = "crates/tachikoma-audit-system-events" }
tachikoma-audit-user-activity = { path = "crates/tachikoma-audit-user-activity" }
tachikoma-audit-timeline = { path = "crates/tachikoma-audit-timeline" }
tachikoma-audit-search = { path = "crates/tachikoma-audit-search" }
tachikoma-audit-compliance = { path = "crates/tachikoma-audit-compliance" }
tachikoma-audit-export = { path = "crates/tachikoma-audit-export" }
tachikoma-audit-archival = { path = "crates/tachikoma-audit-archival" }
tachikoma-audit-immutability = { path = "crates/tachikoma-audit-immutability" }
tachikoma-audit-alerting = { path = "crates/tachikoma-audit-alerting" }
tachikoma-plugin = { path = "crates/tachikoma-plugin" }

# Build profiles
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 16
strip = true

# Distribution profile (maximum optimization)
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Profile for benchmarks
[profile.bench]
inherits = "release"
debug = true  # For profiling
lto = "thin"

# Profile for CI tests (balance speed and optimization)
[profile.ci]
inherits = "dev"
opt-level = 1
debug = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false