[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "Ralph Wiggum Loop - Agentic coding harness for Tachikoma"
authors = ["Tachikoma Team"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for parsing
regex = "1.10"

# Environment variables
dotenvy = "0.15"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streaming for SSE
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
eventsource-stream = "0.2"

# UUID for session IDs
uuid = { version = "1.10", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TUI dependencies
ratatui = "0.30"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.24"

[[bin]]
name = "ralph"
path = "src/main.rs"
