[package]
name = "tachikoma-audit-alerting"
version = "0.1.0"
edition = "2021"
description = "Real-time alerting based on audit events"
license = "MIT OR Apache-2.0"

[dependencies]
# Core
tachikoma-audit-types = { path = "../tachikoma-audit-types" }
tachikoma-common-async = { path = "../tachikoma-common-async" }
tachikoma-common-core = { path = "../tachikoma-common-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"