[package]
name = "tachikoma-audit-archival"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audit log archival for Tachikoma"

[dependencies]
tachikoma-audit-types.workspace = true
tachikoma-common-core.workspace = true
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { version = "1.6", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
parking_lot = "0.12"
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.24"
sha2 = "0.10"
tokio = { workspace = true, features = ["fs"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "test-util"] }
proptest.workspace = true