[package]
name = "tachikoma-audit-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audit event capture middleware for Tachikoma"

[dependencies]
tachikoma-audit-types.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
proptest.workspace = true