[package]
name = "tachikoma-audit-compliance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography
sha2 = "0.10"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
parking_lot = "0.12"

# Audit types
tachikoma-audit-types = { path = "../tachikoma-audit-types" }

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.8"
test-case.workspace = true