[package]
name = "tachikoma-audit-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full-text search for audit events in Tachikoma"

[dependencies]
tachikoma-common-core.workspace = true
tachikoma-audit-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.30", features = ["bundled"] }
parking_lot = "0.12"
regex = "1.10"

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.8"