[package]
name = "tachikoma-cli"
version.workspace = true
edition.workspace = true
authors = ["Tachikoma Contributors"]
description = "CLI for Tachikoma AI Agent Development Framework"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["ai", "agent", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tachikoma"
path = "src/main.rs"

[dependencies]
tachikoma-common-core = { workspace = true }
tachikoma-common-config = { workspace = true }
tachikoma-primitives = { workspace = true }

clap = { workspace = true, features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
glob = { workspace = true }
async-trait = "0.1"
terminal_size = "0.3"
textwrap = "0.16"
is-terminal = "0.4"
regex = "1.10"
crossterm = "0.27"
rpassword = "7.3"
toml = "0.8"
walkdir = "2.4"
dirs = "5.0"
reqwest = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
mockito = "1.4"
diff = "0.1"
criterion = "0.5"
tachikoma-test-utils = { workspace = true }

