[package]
name = "tachikoma-common-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async runtime utilities for Tachikoma"

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
futures = "0.3"
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true