[package]
name = "tachikoma-common-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration types for Tachikoma"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = "1.10"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.9"