[package]
name = "tachikoma-common-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Tachikoma"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
serde_json = { workspace = true }