[package]
name = "tachikoma-common-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Tachikoma"

[features]
default = []

# Development features
dev = ["debug-logging", "hot-reload"]
debug-logging = []
hot-reload = []

# Testing features
test-utils = ["proptest", "insta"]
proptest = ["dep:proptest"]
mocks = []

# Backend features
claude = []
openai = []
gemini = []
ollama = []
all-backends = ["claude", "openai", "gemini", "ollama"]

# Platform features
server = ["axum", "tower"]
native = ["napi", "napi-derive"]

# Optimization features
simd = []
mimalloc = ["dep:mimalloc"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies
proptest = { workspace = true, optional = true }
insta = { workspace = true, optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
proptest.workspace = true
serde_json = { workspace = true }
tokio-test.workspace = true

[build-dependencies]
chrono = "0.4"