[package]
name = "tachikoma-common-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client utilities for Tachikoma"

[dependencies]
reqwest = { workspace = true, features = ["json", "gzip"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
serde_json.workspace = true