[package]
name = "tachikoma-common-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "logging_demo"
path = "examples/logging_demo.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
thiserror.workspace = true