[package]
name = "tachikoma-common-secret"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure secret handling for Tachikoma"

[dependencies]
serde = { workspace = true, features = ["derive"] }
zeroize = { version = "1.7", features = ["derive"] }
regex = "1.10"

[dev-dependencies]
serde_json = { workspace = true }