[package]
name = "tachikoma-common-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Core utilities
tachikoma-common-core = { workspace = true }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
test-case = { workspace = true }

[features]
default = []