[package]
name = "tachikoma-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common dependencies
tachikoma-common-core = { path = "../tachikoma-common-core" }

# Async/await
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Markdown processing
pulldown-cmark = "0.12"

# Error handling
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

[dev-dependencies]
tempfile = "3.0"