[package]
name = "tachikoma-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "napi4"] }
napi-derive = "2"
tachikoma-forge = { path = "../tachikoma-forge" }
tachikoma-common-core = { path = "../tachikoma-common-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2"