[package]
name = "tachikoma-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachikoma API server"

[[bin]]
name = "tachikoma-server"
path = "src/bin/server.rs"

[lib]
name = "tachikoma_server"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["websocket", "metrics", "tracing"]
websocket = ["tokio-tungstenite"]
metrics = ["dep:prometheus"]
tracing = ["dep:tracing-subscriber"]

[dependencies]
# Workspace dependencies
tachikoma-common-core.workspace = true
tachikoma-common-config.workspace = true

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
    "cors",
    "compression-gzip",
    "trace",
    "timeout",
    "limit",
    "request-id",
    "catch-panic"
] }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# WebSocket
tokio-tungstenite = { version = "0.21", optional = true }

# Metrics
prometheus = { version = "0.13", optional = true }

# Logging/Tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
num_cpus = "1.16"

# Configuration
config = "0.14"
dotenvy = "0.15"

# TLS
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
rcgen = "0.12"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"
testcontainers = "0.15"
proptest.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "api_benchmarks"
harness = false