[package]
name = "tachikoma-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# File watching
notify = "6.1"

# Template engine
handlebars = "5.1"
regex = "1.10"

# Date handling
chrono = { version = "0.4", features = ["serde"] }

# Common utilities
tachikoma-common-fs = { path = "../tachikoma-common-fs" }
futures = "0.3"

# Testing
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"