[package]
name = "tachikoma-test-harness"
version.workspace = true
edition.workspace = true
description = "Unified test harness for Tachikoma"

[dependencies]
# Test utilities
tempfile = "3.9"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1.19"
parking_lot = "0.12"
async-trait = "0.1"

# Test frameworks
proptest = "1.4"
insta = { version = "1.34", features = ["yaml", "json"] }
test-case = "3.3"
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "2.9", features = ["derive"] }
rstest = "0.18"

# Random number generation
rand = "0.8"

# Assertions
pretty_assertions = "1.4"
assert_matches = "1.5"

# Tracing for tests
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# For property test examples and API generators
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"

[[bench]]
name = "criterion_benchmarks"
harness = false